@startuml

title __CONFIG's Class Diagram__\n

  package org.fluentcodes.projects.elasticobjects {
    package org.fluentcodes.projects.elasticobjects.config {
      class XlsxConfig {
          - xlsxKey : String
          - fileKey : String
          - sheetName : String
          # XlsxConfig()
          + getKey()
          + getXlsxKey()
          + getFileKey()
          + getFileConfig()
          + getSheetName()
          + readWorkbook()
          + getSheet()
          + hasNoSheetName()
          # getSheet()
          + createIO()
      }
    }
  }
  

  package org.fluentcodes.projects.elasticobjects {
    package org.fluentcodes.projects.elasticobjects.config {
      class Builder {
          - xlsxKey : String
          - fileKey : String
          - sheetName : String
          + Builder()
          # prepare()
          + build()
      }
    }
  }
  

  package org.fluentcodes.projects.elasticobjects {
    package org.fluentcodes.projects.elasticobjects.config {
      enum KEYS {
        xlsxKey
        fileKey
        sheetName
      }
    }
  }
  

  package org.fluentcodes.projects.elasticobjects {
    package org.fluentcodes.projects.elasticobjects.config {
      class Builder {
          # prepare()
      }
    }
  }
  

  package org.fluentcodes.projects.elasticobjects {
    package org.fluentcodes.projects.elasticobjects.config {
      class Builder {
          - mapPath : String
          # prepare()
      }
    }
  }
  

  package org.fluentcodes.projects.elasticobjects {
    package org.fluentcodes.projects.elasticobjects.config {
      class Builder {
          - module : String
          - subModule : String
          - path : String
          - mapPath : String
          - scope : List<Scope>
          - description : String
          - naturalId : String
          - id : Long
          - creationDate : Date
          - expanded : boolean
          + Builder()
          # prepare()
          # isExpanded()
      }
    }
  }
  

  package org.fluentcodes.projects.elasticobjects {
    package org.fluentcodes.projects.elasticobjects.config {
      class XlsxIO {
          - sheet : Sheet
          - actualRow : int
          - emptyCounter : int
          + XlsxIO()
          + getXlsxConfig()
          + read()
          + write()
          + reset()
          + close()
          - getSheet()
          - readWorkbook()
          + readRow()
          + readHead()
          + readRow()
          - getRowAsList()
          + write()
          + writeWorkbook()
          # createSheet()
      }
    }
  }
  

  XlsxConfig -up-|> ListConfig
  XlsxConfig o-- FileConfig : fileCache
  XlsxConfig +-down- Builder
  XlsxConfig +-down- KEYS
  XlsxConfig +-down- Builder
  XlsxConfig +-down- Builder
  XlsxConfig +-down- Builder
  Builder -up-|> Builder
  Builder -up-|> Builder
  Builder o-- ListParams : listParams
  Builder o-- ListMapper : listMapper
  Builder -up-|> Builder
  Builder o-- RolePermissions : rolePermissions
  XlsxIO -up-|> ListIOInterface
  XlsxIO -up-|> ListIO


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
